# python-project-52

./: .gitignore  Makefile  README.md  build.sh  coverage.xml  db.sqlite3  pyproject.toml
.github/workflows/: build.yml
src/: db.sqlite3
src/hexlet_code/:  __init__.py  __init__.py
src/python_project_52/: __init__.py
src/task_manager/: __init__.py  filters.py  models.py  settings.py  tests.py  urls.py  views.py  wsgi.py
src/task_manager/migrations/: 0003_label_task_labels.py
src/task_manager/views/: __init__.py  labels.py  statuses.py  tasks.py  users.py
src/templates/: index.html
src/templates/layouts/: base.html
src/templates/statuses/: delete.html  form.html  list.html
src/templates/tasks/: form.html  list.html  show.html
src/templates/users/: login.html  user_confirm_delete.html  user_form.html  user_list.html
task_manager/: pages.py  settings.py  tests.py  urls.py  wsgi.py
task_manager/labels/: models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/migrations/: 0001_initial.py  0002_task.py
task_manager/statuses/: models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: filters.py  models.py  urls.py  views.py
task_manager/users/: models.py  urls.py  views.py
task_manager/views/: __init__.py  mixins.py  statuses.py
templates/labels/: delete.html  form.html  list.html
templates/statuses/: list.html
templates/tasks/: delete.html  form.html
templates/users/: login.html  user_form.html  user_list.html
(+1 files in other folders)
