[project]
name = "python-project-52"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=3.0.1",
    "django>=5.2.9",
    "gunicorn>=23.0.0",
    "python-dotenv>=1.2.1",
]

[project.scripts]
python-project-52 = "python_project_52:main"

[build-system]
requires = ["uv_build>=0.9.14,<0.10.0"]
build-backend = "uv_build"
